--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^8.19.1"
   },
   "devDependencies": {
